crates/rome_js_formatter/tests/specs/prettier/js/module-blocks/range.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: range.js

---
# Input
```js
let moduleBlock = module {  export let y = 1;
};

foo(module { export let foo = "foo"; })

```

# Output
```js
let moduleBlock = module {  export let y = 1;
}

foo(module { export let foo = "foo"; })

```

# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ range.js:1:26
  │
1 │ let moduleBlock = module {  export let y = 1;
  │ -------------------------^ An explicit or implicit semicolon is expected here...
  │ │                         
  │ ...Which is required to end this statement

error[SyntaxError]: Illegal use of an export declaration not at the top level
  ┌─ range.js:1:29
  │
1 │ let moduleBlock = module {  export let y = 1;
  │                             ^^^^^^^^^^^^^^^^^ move this declaration to the top level

error[SyntaxError]: expected `,` but instead found `{`
  ┌─ range.js:4:12
  │
4 │ foo(module { export let foo = "foo"; })
  │            ^ unexpected

error[SyntaxError]: expected `:` but instead found `let`
  ┌─ range.js:4:21
  │
4 │ foo(module { export let foo = "foo"; })
  │                     ^^^ unexpected

error[SyntaxError]: expected `,` but instead found `foo`
  ┌─ range.js:4:25
  │
4 │ foo(module { export let foo = "foo"; })
  │                         ^^^ unexpected

error[SyntaxError]: Did you mean to use a `:`? An `=` can only follow a property name when the containing object literal is part of a destructuring pattern.
  ┌─ range.js:4:29
  │
4 │ foo(module { export let foo = "foo"; })
  │                             ^

error[SyntaxError]: expected `,` but instead found `;`
  ┌─ range.js:4:36
  │
4 │ foo(module { export let foo = "foo"; })
  │                                    ^ unexpected

error[SyntaxError]: expected a statement but instead found '})'
  ┌─ range.js:4:38
  │
4 │ foo(module { export let foo = "foo"; })
  │                                      ^^ Expected a statement here


```


